--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Tetris</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/ml5@0.3.1/dist/ml5.min.js"></script>
 </head>
 <body>
     <div>
@@ -10,6 +11,7 @@
     </div>
 </body>
 <script src="const.js"></script>
+<script src="sound.js"></script>
 <script src="dot.js"></script>
 <script src="brick.js"></script>
 <script src="board.js"></script>
